--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -329,7 +329,7 @@
   width: 100%;
   object-fit: contain;
   background-repeat: no-repeat;
-  // height: 300px;
+  height: 600px;
   background-size: contain;
   border-radius: 7px;
   margin-top: 100px;
